# biocode_club

./: README.md  _config.yml  _toc.yml  home_page.md  pyproject.toml
community/: about.md  code_of_conduct.md  join.md
exercises/R/: R_exercises_1.Rmd  R_exercises_intro.md  R_exercises_novice.md  R_exercises_seurat.md
resources/example_resource/: proj_structure_intro  proj_structure_intro.md
resources/proj_structure_course/: proj_structure2.md  proj_structure3.md  proj_structure4.md  proj_structure5.md  proj_structure6.md  proj_structure7.md  proj_structure_1.md
