
[tool.poetry]
name = "rcc-website"
version = "0.1.0"
description = "Research Coding Community website template"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = ">=1.0.0"
jupyterquiz = ">=2.0.6"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
